--- a/Organize.WASM/wwwroot/index.html
+++ b/Organize.WASM/wwwroot/index.html
@@ -10,6 +10,9 @@
     <link href="css/app.css" rel="stylesheet" />
     <link href="css/components/sign.css" rel="stylesheet" />
     <link href="css/components/controls.css" rel="stylesheet" />
+    <link href="css/components/itemElement.css" rel="stylesheet" />
+    <link href="css/components/itemCheckBox.css" rel="stylesheet" />
+    <link href="css/components/itemsList.css" rel="stylesheet" />
     <link href="_content/GeneralUi/css/styles.css" rel="stylesheet" />
 </head>
 
