--- a/Organize.WASM/wwwroot/index.html
+++ b/Organize.WASM/wwwroot/index.html
@@ -16,6 +16,8 @@
     <link href="css/components/itemsOverview.min.css" rel="stylesheet" />
     <link href="css/components/itemEdit.min.css" rel="stylesheet" />
     <link href="_content/GeneralUi/css/styles.css" rel="stylesheet" />
+
+    <link href="_content/Blazored.Modal/blazored-modal.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -37,6 +39,9 @@
     <script src="bootstrap/js/dist/collapse.js"></script>
     <script src="bootstrap/js/dist/dropdown.js"></script>
     <script src="js/jsInterop.js"></script>
+
+    <script src="_content/Organize.IndexedDB/indexedDB.js"></script>
+    <script src="_content/Blazored.Modal/blazored.modal.js"></script>
 
 </body>
 
